Capture history of SQL patches installed & host hardware upgrades.  SQL 2005 compat issues fixed.  Added wait_type to blocking capture.  Report improvements

--- a/DBAChecksReports/AgentJobs.rdl
+++ b/DBAChecksReports/AgentJobs.rdl
@@ -1781,6 +1781,7 @@
                             <PaddingBottom>2pt</PaddingBottom>
                           </Style>
                         </Textbox>
+                        <rd:Selected>true</rd:Selected>
                       </CellContents>
                     </TablixCell>
                     <TablixCell>
@@ -2941,6 +2942,16 @@ Fields!LastFailStatus.Value=4,"Green")</BackgroundColor>
                   <Group Name="table1_Details_Group">
                     <DataElementName>Detail</DataElementName>
                   </Group>
+                  <SortExpressions>
+                    <SortExpression>
+                      <Value>=Fields!IsLastFail.Value</Value>
+                      <Direction>Descending</Direction>
+                    </SortExpression>
+                    <SortExpression>
+                      <Value>=Fields!LastFail.Value</Value>
+                      <Direction>Descending</Direction>
+                    </SortExpression>
+                  </SortExpressions>
                   <TablixMembers>
                     <TablixMember />
                   </TablixMembers>
